footer, article item design, responsive

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 
 <body>
   <div id="root"></div>
+
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/5573292baf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
