--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="inshorts-icon.png" />
+  <link rel="icon" href="./icon192x192.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="inshorts-icon.png" />
+  <link rel="apple-touch-icon" href="./icon64x64.png" />
   <title>Inshorts Clone</title>
 </head>
 
