font awesome link update

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="./icon64x64.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <title>Inshorts Clone</title>
 </head>
 
@@ -15,7 +16,7 @@
   <div id="root"></div>
 
   <!-- font awesome -->
-  <script src="https://kit.fontawesome.com/5573292baf.js" crossorigin="anonymous"></script>
+<!--   <script src="https://kit.fontawesome.com/5573292baf.js" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
